# Troptions-full-pack

./: .env.aws.template  .env.example  .gitignore  ACTIVATE_NOW.md  AGENTS_COMPLETE.md  APOSTLE_DEEP_DIVE.md  ARBITRAGE_BAAS_X402_COMPLETE.md  ARCHITECTURE_DIAGRAM.mmd  FIAT_RAILS_COMPLETE.md  FINAL_ECOSYSTEM_AUDIT.md  FULL_ACTIVATION_COMPLETE.md  FULL_AUDIT_REPORT.md  GEM_FRACTIONALIZATION_SYSTEM.md  IOU_ISSUER_FLOW.mmd  MSB_INTEGRATION_QUICKSTART.md  MULTI_GATEWAY_COMPLETE.md  ONCHAIN_VERIFICATION_PROOF.md  PLUG_AND_PLAY_COMPLETE.md  README.md  SYSTEM_MANIFEST.md  SYSTEM_MANIFEST_AUTO.json  SYSTEM_MANIFEST_v2.md  SYSTEM_MANIFEST_v3.md  TECHNICAL_INDEX.md  TELEGRAM_BOT_GUIDE.md  TROPTIONS_ANTHEM_COMPLETE_DELIVERABLE.md  TROPTIONS_ANTHEM_EXECUTION_REPORT.md  TROPTIONS_ANTHEM_FINAL_REPORT.md  TROPTIONS_ANTHEM_IPFS_MANIFEST.md  TROPTIONS_ANTHEM_ONCHAIN_PACKAGE.md  TROPTIONS_GEM_COMPLETE_DELIVERABLE.md  TROPTIONS_GEM_TOKENIZATION.md  TROPTIONS_IOU_ISSUER_MANIFEST.md  TROPTIONS_IPFS_CIDS.json  TROPTIONS_L1_ANCHOR_MANIFEST.json  TROPTIONS_PLUG_AND_PLAY_SYSTEM.md  UPGRADE_REPORT.md  VERIFICATION_STATUS.md  X402_AWS_VERIFICATION.md  X402_FIXED.md  (+8 more)
frontends/exchange-os/troptions-rust-l1/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/agora/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/agora/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/amm/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/amm/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/assets/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/assets/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/brands/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/brands/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/bridge-stellar/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/bridge-stellar/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/bridge-xrpl/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/bridge-xrpl/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/cli/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/cli/src/: main.rs
frontends/exchange-os/troptions-rust-l1/crates/compliance/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/compliance/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/consensus/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/consensus/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/contracts/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/contracts/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/control-hub/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/control-hub/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/crypto/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/crypto/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/genesis/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/genesis/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/givbux/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/givbux/src/: errors.rs  lib.rs  types.rs
frontends/exchange-os/troptions-rust-l1/crates/governance/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/governance/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/legacy-claims/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/legacy-claims/src/: errors.rs  lib.rs  types.rs
frontends/exchange-os/troptions-rust-l1/crates/mbridge/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/mbridge/src/: lib.rs
frontends/exchange-os/troptions-rust-l1/crates/media/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/media/src/: errors.rs  lib.rs  types.rs
frontends/exchange-os/troptions-rust-l1/crates/namespaces/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/namespaces/src/: errors.rs  lib.rs  types.rs
frontends/exchange-os/troptions-rust-l1/crates/nft/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/nil/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/node/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/pq-crypto/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/rln/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/rpc/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/runtime/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/rwa/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/sdk/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/stablecoin/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/state/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/telemetry/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/troptions-genius-core/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/crates/trustlines/: Cargo.toml
frontends/exchange-os/troptions-rust-l1/docs/layer1/: l1-scaffold-report.md
l1/: Cargo.toml  Dockerfile  troptions-node-pm2.json
l1/crates/atomic-router/: Cargo.toml
l1/crates/atomic-router/src/: lib.rs
l1/crates/crypto/: Cargo.toml
l1/crates/crypto/src/: lib.rs
l1/crates/governance/: Cargo.toml
l1/crates/governance/src/: lib.rs
l1/crates/node/: Cargo.toml
l1/crates/node/src/: http_server.rs  main.rs
l1/crates/primitives/: Cargo.toml
l1/crates/primitives/src/: lib.rs
l1/crates/rpc/: Cargo.toml
l1/crates/rpc/src/: lib.rs  metrics.rs  x402.rs
l1/crates/runtime/: Cargo.toml
l1/crates/runtime/src/: lib.rs  multisig.rs
l1/crates/runtime/tests/: multisig_tests.rs
l1/crates/sequencer/: Cargo.toml
l1/crates/sequencer/src/: lib.rs
l1/crates/settlement/: Cargo.toml
l1/crates/settlement/src/: lib.rs
l1/crates/soulbound/: Cargo.toml
l1/crates/soulbound/src/: lib.rs
l1/crates/state/: Cargo.toml
l1/crates/state/src/: lib.rs  persistence.rs
l1/crates/state/tests/: persistence_tests.rs  treasury_tests.rs
l1/tests/integration/: Cargo.toml  signed_dao_submit.rs  signed_submit.rs
(+2751 files in other folders)
