[workspace]
members = [
    "crates/node",
    "crates/consensus",
    "crates/runtime",
    "crates/state",
    "crates/crypto",
    "crates/pq-crypto",
    "crates/assets",
    "crates/trustlines",
    "crates/stablecoin",
    "crates/rwa",
    "crates/nft",
    "crates/amm",
    "crates/compliance",
    "crates/governance",
    "crates/control-hub",
    "crates/bridge-xrpl",
    "crates/bridge-stellar",
    "crates/rln",
    "crates/agora",
    "crates/mbridge",
    "crates/rpc",
    "crates/telemetry",
    "crates/sdk",
    "crates/cli",
    "crates/brands",
    "crates/genesis",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/FTHTrading/Troptions"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
