[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
primitives = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
rand = "0.8"
rand_core = "0.6"

[dev-dependencies]
serde_json = { workspace = true }
