[package]
name = "node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
primitives = { workspace = true }
state = { workspace = true }
runtime = { workspace = true }
soulbound = { workspace = true }
settlement = { workspace = true }
atomic-router = { workspace = true }
crypto = { workspace = true }
rpc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "troptions-node"
path = "src/main.rs"
