[package]
name = "primitives"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

# Add arrayvec for array serialization support
arrayvec = { version = "0.7", features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }
