[package]
name = "runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
primitives = { workspace = true }
crypto = { workspace = true }
state = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
crypto = { workspace = true }
primitives = { workspace = true }
state = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
