[package]
name = "state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
primitives = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
rocksdb = "0.21"

[dev-dependencies]
tempfile = "3.10"
