[package]
name = "l1-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "signed_submit"
path = "signed_submit.rs"

[dependencies]
primitives = { path = "../../crates/primitives" }
crypto = { path = "../../crates/crypto" }
state = { path = "../../crates/state" }
runtime = { path = "../../crates/runtime" }
serde_json = { workspace = true }
