[package]
name = "tsn-brands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Troptions brand entity registry — all 8 domains embedded in the TSN L1"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
