[package]
name = "tsn_contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TROPTIONS Settlement Network — simulation-only smart contract primitives"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
