[package]
name = "tsn-control-hub"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tsn-state = { path = "../state" }
tsn-compliance = { path = "../compliance" }
tsn-governance = { path = "../governance" }
