[package]
name = "tsn-givbux"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tsn-state = { path = "../state" }
tsn-crypto = { path = "../crypto" }
