[package]
name = "tsn-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tsn-state = { path = "../state" }
tsn-rpc = { path = "../rpc" }
tsn-telemetry = { path = "../telemetry" }
